Add atomic product import endpoint
